--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -80,13 +80,25 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="img/home-bg.jpg" alt="First slide">
+            <img src="img/alexandr.jpg" alt="First slide">
+            <ul>
+            <li>Coffee</li>
+            <li>Milk</li>
+            </ul>
         </div>
         <div class="item">
-            <img src="img/home-bg.jpg" alt="Second slide">
+            <img src="img/saz.jpg" alt="Second slide">
+            <ul>
+            <li>Coffee</li>
+            <li>Milk</li>
+            </ul>
         </div>
         <div class="item">
-            <img src="img/home-bg.jpg" alt="Third slide">
+            <img src="img/willian.jpg" alt="Third slide">
+            <ul>
+            <li>Coffee</li>
+            <li>Milk</li>
+            </ul>
         </div>
     </div>
     <!-- 轮播（Carousel）导航 -->
@@ -97,6 +109,7 @@
         data-slide="next">&rsaquo;
     </a >
 </div>
+
        
     </header>
 
