修改图片长宽

--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -80,25 +80,13 @@
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
         <div class="item active">
-            <img src="img/alexandr.jpg" alt="First slide">
-            <ul>
-            <li>Coffee</li>
-            <li>Milk</li>
-            </ul>
+            <img src="img/alexandr.jpg" alt="First slide" width="1900" height="872">
         </div>
         <div class="item">
-            <img src="img/saz.jpg" alt="Second slide">
-            <ul>
-            <li>Coffee</li>
-            <li>Milk</li>
-            </ul>
+            <img src="img/saz.jpg" alt="Second slide" width="1900" height="872">
         </div>
         <div class="item">
-            <img src="img/willian.jpg" alt="Third slide">
-            <ul>
-            <li>Coffee</li>
-            <li>Milk</li>
-            </ul>
+            <img src="img/willian.jpg" alt="Third slide" width="1900" height="872">
         </div>
     </div>
     <!-- 轮播（Carousel）导航 -->
