--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -281,13 +281,13 @@ color:#333333;
             strings: ["一站式研发管理平台", "贡献力量服务更多的企业"],
             typeSpeed: 200, //default
             //optional
-            backSpeed: 100, //default
+            backSpeed: 200, //default
             //optional
-            startDelay: 500, //default
+            startDelay: 200, //default
             //optional
-            backDelay: 500, //default
+            backDelay: 2000, //default
             //optional
-            loop: false, //default
+            loop: true, //default
             //optional    
             showCursor: true, //default
             //optional    
@@ -297,7 +297,7 @@ color:#333333;
             // loop (boolean) : true
         });
     });
-            $('#myCarousel').carousel({interval:10000});//每隔5秒自动轮播 
+            $('#myCarousel').carousel({interval:15000});//每隔5秒自动轮播 
         }); 
     </script>
 
