#72 深圳 代码关联

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ color:#333333;
                 </div>
                 <hr>
                 <!-- Pager -->
-                <ul class="pager">
+        <!--         <ul class="pager">
                     <li class="next">
                         <a href="#">更多内容 &rarr;</a>
                     </li>
@@ -223,7 +223,7 @@ color:#333333;
         </div>
     </div>
 
-    <hr> -->
+    <hr>  -->
 
  <!--    <!-- Footer -->
 <!--     <footer>
