--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -262,18 +262,18 @@ color:#333333;
         </div>
     </footer>
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-
+<!--     <!-- jQuery -->
+<!--     <script src="vendor/jquery/jquery.min.js"></script>
+ -->
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
+<!--     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+ -->
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+<!--     <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script> -->
 
     <!-- Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
+ <!--    <script src="js/clean-blog.min.js"></script>
     <script type="text/javascript" src="js/typed.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){ $(function(){
