--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -117,7 +117,7 @@ color:#333333;
         </div>
         <div class="clearfix"></div>  
     </header>
-        <!--<div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
@@ -132,7 +132,7 @@ color:#333333;
             </div>
         </div>
     </header>
-    <!-- Main Content -->
+    <!-- Main Content 
 <!--     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
