--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -117,7 +117,7 @@ color:#333333;
         </div>
         <div class="clearfix"></div>  
     </header>
-        <div class="container">
+     <!--    <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
@@ -131,7 +131,7 @@ color:#333333;
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
     <!-- Main Content 
 <!--     <div class="container">
         <div class="row">
