#72 回家回家回家回家就好

--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -90,7 +90,7 @@ color:#333333;
         <h1><B>ONES.AI</h1></B>
         <br>
         <span class="typed"></span>
-        <h3>一站式研发管理平台</h3>
+<!--         <h3>一站式研发管理平台</h3>-->          
         <h4><B><a class="head-test" style="text-decoration: none; color:white;" href="https://ones.ai" >马上体验</a></B></h4>
       </div>
   
