--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -116,7 +116,7 @@ color:#333333;
             
         </div>
         <div class="clearfix"></div>  
-<!--     </header>
+    </header>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -131,7 +131,7 @@ color:#333333;
                 </div>
             </div>
         </div>
-    </header> -->
+    </header>
     <!-- Main Content 
 <!--     <div class="container">
         <div class="row">
