--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -273,7 +273,7 @@ color:#333333;
     <script src="js/contact_me.js"></script> -->
 
     <!-- Theme JavaScript -->
- <!--    <script src="js/clean-blog.min.js"></script>
+    <script src="js/clean-blog.min.js"></script>
     <script type="text/javascript" src="js/typed.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){ $(function(){
@@ -299,7 +299,7 @@ color:#333333;
     });
             $('#myCarousel').carousel({interval:15000});//每隔5秒自动轮播 
         }); 
-    </script>  -->
+    </script> 
 
 </body>
 
