#72 斤斤计较斤斤计较斤斤计较

--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -262,7 +262,7 @@ color:#333333;
         </div>
     </footer>
 
-    jQuery 
+         <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
